css/style.css
/* -------------  VARIABLES ------------- */

:root {
  --primary-purple: 122, 108, 177;
  --secondary-purple: 61, 54, 88;
  --light-grey: #F8F8F8;
  --grey: #888;
  --dark-grey: #575757;
  --black: #171717;
  --green : #A6C48A;
  --current-body-font: '';
  --current-header-font: '';
}

.theme-light {
  --color-primary: #fff;
  --color-secondary: var(--light-grey);
  --color-accent: var(--light-grey);
  --font-color: #000000;
  --body-font: 300;
}

.theme-dark {
  --color-primary: var(--black);
  --color-secondary: var(--dark-grey);
  --color-accent: var(--grey);
  --font-color: #fbfbfb;
  --body-font: 400;
}


/* -------------  VARIABLES END ------------- */

/* -------------  BASIC SETTINGS ------------- */

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: var(--font-color);
}

html {
  font-family: 'Roboto', sans-serif;
  font-weight: var(--body-font);
}

body {
  display: flex;
  background-color: var(--color-primary);
}

h2 {
  font-size: 1.7rem;
}

/* -------------  BASIC SETTINGS END ------------- */

/* -------------  TYPOGRAPHY ------------- */

.heading-primary {
  font-family: 'Playfair Display', serif;
  font-size: 3rem;

  color: rgba(var(--primary-purple));
}

.paragraph-lead {
  font-family: inherit;
  font-size: 1.7rem;
  color: var(--font-color);
}

/* -------------  TYPOGRAPHY END -------------*/

/* -------------  ANIMATIONS ------------- */

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(.5rem);
  }

  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideDown {
  0%    {opacity: 1; transform: translateY(0);}
  100%  {opacity: 0; transform: translateY(100rem);}
}

.slideDown {
  animation: slideDown 1s ease;
}

@keyframes fadeIn {
  0%    {opacity: 0;}
  100%  {opacity: 1;}
}

.fadeIn {
  animation: fadeIn .5s ease;
  animation-fill-mode: backwards;
}

/* -------------  ANIMATIONS END ------------- */

/* -------------  BUTTONS ------------- */

.button__edit {
  -webkit-appearance: none;
  cursor: pointer;

  position: fixed;

  height: 8rem;
  width: 8rem;
  padding: 2rem;
  bottom: 2rem;
  right: 2rem;

  background-color: rgb(var(--primary-purple));
  border: none;
  border-radius: 4rem;
}

.button__edit:hover {
  background-color: rgb(var(--secondary-purple));
}

.button__edit:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(var(--primary-purple), .5);
}

.button__edit-inner {
  filter: invert(1);
}

@media only screen and (max-width: 768px) {
  .button__edit {

  height: 6rem;
  width: 6rem;
  padding: 1.5rem;
  bottom: 6rem;
  right: 2rem;

  background-color: rgb(var(--primary-purple));
  border: none;
  border-radius: 4rem;
}
}

/* -------------  BUTTONS ENS ------------- */

/* ------------- EDITOR SECTION -------------*/

#editorTitle {
  margin-top: 4rem;
}

.editor-section {
  margin: 5rem 15rem;
  display: none;
  flex-direction: column;
}

.editor-section__title {
  font-family: 'Playfair Display', serif;
  font-size: 3rem;
  color: var(--font-color);
  background-color: var(--color-primary);
  padding: .5rem 15px;
  margin-bottom: 1rem;
  -webkit-appearance: none;
  border: 2px solid var(--color-primary);
}

.editor-section__title:focus {
  outline: none;
  border: 2px solid rgb(var(--primary-purple));
}

.editor-section__editor {
  width: 100%;
  height: 44.2rem;
  max-height: 84.2rem;
}

.editor-section__menu {
  border: 0;
  border-top: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.editor-section__button {
  -webkit-appearance: none;
  cursor: pointer;

  font-family: inherit;
  font-size: 1.2rem;
  color: var(--grey);

  border: none;
  border-right: .1rem solid #ccc;

  padding: 1rem;
}


.font-option {
  position: relative;
  width: 20rem;
  display: block;
  height: 1.7rem;
}

.font-option p {
  margin-left: 2rem;
  font-size: 1.5rem;
  font-weight: 600;
  color: gray;
  margin-top: 2rem;
}

.font-option ul {
  list-style: none;
}

.font-option ul li:not(:last-child) {
  border-bottom: 0.2rem solid gainsboro;
  margin-left: 1rem;
}

.font-option ul li {
  padding: 1rem;
  font-weight: 500;
  font-size: 1.75rem;
  margin-left: 1rem;
}

.span-font-status {
  position: absolute;
  right: 0;
  cursor: pointer;
}

.editor-section__button:hover,.editor-section__print:hover {
  background-color: rgb(var(--primary-purple));
  color: white;
}

.editor-section__print {
  -webkit-appearance: none;
  cursor: pointer;

  border: none;
  border-left: .1rem solid #ccc;
  padding: 0 1rem;
}

.editor-section__print:hover .editor-section__print-icon {
  filter: invert(1);
}

.editor-section__print-icon {
  height: 2rem;
  filter: invert(.8);
}

#save-btn::after {
   content: ' \2713';
   color: white;
   display: none;
   animation: saved 2s ease infinite;
}

@media screen and (max-width: 768px) {
  .editor-section {
    margin: 3rem 3rem 10rem 3rem;
    height: 60rem;
  }
} 

@keyframes saved {
  0%    {opacity: 0;}
  20%   {opacity: 1;}
  90%   {opacity: 1;}
  100%  {opacity: 0;}
}

/* ------------- EDITOR SECTION END -------------*/

@media screen and (max-width:768px) {
  body {
    overflow-x: hidden;
  }

  #quire-footer {
    display: flex;
  }
}

.nav-active {
  transform: translateX(0%)
}


/* ------------- NAVBAR DESIGN ENDS -------------*/


/* ------------- SETTINGS DESIGN -------------*/

.switch {
  margin-left: 2rem;
  position: relative;
  display: inline-block;
  width: 3rem;
  height: 1.7rem;
}

.checkbox-label {
  margin-left: 2rem;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width:4rem;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider::before {
  position: absolute;
  content: "";
  height: 2.3rem;
  width: 2.3rem;
  left: -0.3rem;
  bottom: -.3rem;
  background-color: rgb(var(--secondary-purple));
  -webkit-transition: .4s;
  transition: .4s;
}
/* ... */

